# 24_02_Django

./: pyproject.toml
1stday/: db.sqlite3  pyproject.toml
1stday/boards/: admin.py
1stday/boards/migrations/: 0001_initial.py
1stday/config/: settings.py  urls.py
1stday/feeds/: admin.py  urls.py  views.py
1stday/feeds/templates/: feeds.html
1stday/myapp/: models.py
1stday/reviews/: admin.py  models.py
1stday/reviews/migrations/: 0001_initial.py  0002_initial.py
1stday/users/: admin.py  models.py  serializers.py  urls.py  views.py
1stday/users/migrations/: 0001_initial.py
2nd_project/: pyproject.toml
2nd_project/config/: settings.py
2nd_project/feeds/: serializers.py  urls.py  views.py
2nd_project/myproject/: db.sqlite3
2nd_project/myproject/myapp/: admin.py  models.py  urls.py  views.py
2nd_project/myproject/myapp/templates/myapp/: home.html
2nd_project/myproject/myproject/: settings.py
2nd_project/users/: serializers.py  urls.py
5th_Day/: Exam_Matplotlib.ipynb  Exam_NBAData.ipynb  Example_WineData (1).ipynb  Matplotlib_Example.ipynb
7th_day/: Machine_learning.ipynb
Testcode/: db.sqlite3
Testcode/boards/: models.py
Testcode/common/: models.py
Testcode/feeds/: serializers.py  tests.py  urls.py
Testcode/feeds/migrations/: 0001_initial.py  0002_initial.py
Testcode/myapp/: admin.py
Testcode/myproject/myproject/: settings.py  urls.py
Testcode/reviews/: serializers.py  tests.py  urls.py  views.py
Testcode/users/: admin.py  serializers.py  urls.py
config/: urls.py
myvenv/: pyvenv.cfg
venv_3.8/: pyvenv.cfg
