[tool.poetry]
name = "django_oz"
version = "0.1.0"
description = ""
authors = ["Seou0912 <myuni0912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
selenium = "^4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
